test/e2e/smi_ingress/rollout-smi-ingress-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-smi-ingress-canary-canary
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollout-smi-ingress-canary
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-smi-ingress-canary-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollout-smi-ingress-canary
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollout-smi-ingress-canary-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rollout-smi-ingress-canary.local
      http:
        paths:
          - path: /
            backend:
              # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
              serviceName: rollout-smi-ingress-canary-stable
              servicePort: 80
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-smi-ingress-canary
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: rollout-smi-ingress-canary-canary
      stableService: rollout-smi-ingress-canary-stable
      trafficRouting:
        nginx:
          stableIngress: rollout-smi-ingress-canary-stable
        smi:
          trafficSplitName: rollout-smi-ingress-canary-trafficsplit
      steps:
      - setWeight: 5
      - pause:
          duration: 15
      - setWeight: 50
      - pause:
          duration: 15
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-smi-ingress-canary
  template:
    metadata:
      labels:
        app: rollout-smi-ingress-canary
    spec:
      containers:
      - name: rollout-smi-ingress-canary
        image: nginx:1.19-alpine
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
